--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.application.name=ticketing-auth
 logging.level.com.ticketing.auth=DEBUG
 
 # eureka
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 server.port=0
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
 
+# actuator
+management.endpoints.web.exposure.include=*
