--- a/tickets/src/main/resources/application.properties
+++ b/tickets/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.application.name=ticketing-tickets
 logging.level.com.ticketing.tickets=DEBUG
 
 # eureka
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 server.port=0
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+
+# actuator
+management.endpoints.web.exposure.include=*
