Setup kubernetes services

--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -5,8 +5,8 @@ logging.level.com.ticketing.auth=DEBUG
 
 # eureka
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-server.port=0
-eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+server.port=8080
+eureka.client.serviceUrl.defaultZone=http://discovery-srv:8010/eureka
 
 # actuator
 management.endpoints.web.exposure.include=*
