--- a/tickets/src/main/resources/application.properties
+++ b/tickets/src/main/resources/application.properties
@@ -6,7 +6,12 @@ logging.level.com.ticketing.tickets=DEBUG
 # eureka
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 server.port=0
-eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+eureka.client.serviceUrl.defaultZone=http://discovery-srv:8010/eureka
+
+# eureka disable for testing
+# spring.cloud.service-registry.auto-registration.enabled=false
+# eureka.client.enabled=false
+# eureka.client.serviceUrl.registerWithEureka=false
 
 # actuator
 management.endpoints.web.exposure.include=*
