--- a/discovery/src/main/resources/application.properties
+++ b/discovery/src/main/resources/application.properties
@@ -5,5 +5,5 @@ server.port=8010
 # eureka config
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+eureka.client.serviceUrl.defaultZone=http://discovery-srv:8010/eureka
 eureka.server.enableSelfPreservation=false
