Set up Mongodb successfully with tickets

--- a/tickets/src/main/resources/application.properties
+++ b/tickets/src/main/resources/application.properties
@@ -5,13 +5,17 @@ logging.level.com.ticketing.tickets=DEBUG
 
 # eureka
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-server.port=0
+server.port=8080
 eureka.client.serviceUrl.defaultZone=http://discovery-srv:8010/eureka
 
 # eureka disable for testing
-# spring.cloud.service-registry.auto-registration.enabled=false
-# eureka.client.enabled=false
-# eureka.client.serviceUrl.registerWithEureka=false
+spring.cloud.service-registry.auto-registration.enabled=false
+eureka.client.enabled=false
+eureka.client.serviceUrl.registerWithEureka=false
 
 # actuator
 management.endpoints.web.exposure.include=*
+
+# mongo
+spring.data.mongodb.uri=mongodb://tickets-mongo-srv:27017/tickets
+spring.data.mongodb.database=ticketing-database
