Set up logging, kubernetes, replaced eureka for kubernetes discovery

--- a/tickets/src/main/resources/application.properties
+++ b/tickets/src/main/resources/application.properties
@@ -1,17 +1,10 @@
 spring.application.name=ticketing-tickets
+server.port=8080
 
 # logging
-logging.level.com.ticketing.tickets=DEBUG
-
-# eureka
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-server.port=8080
-eureka.client.serviceUrl.defaultZone=http://discovery-srv:8010/eureka
-
-# eureka disable for testing
-spring.cloud.service-registry.auto-registration.enabled=false
-eureka.client.enabled=false
-eureka.client.serviceUrl.registerWithEureka=false
+logging.level.org.springframework.web=DEBUG
+logging.level.com.ticketing.auth=DEBUG
+logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS,US/Eastern
 
 # actuator
 management.endpoints.web.exposure.include=*
