--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.application.name=ticketing-auth
+server.port=8080
 
 # logging
+logging.level.org.springframework.web=DEBUG
 logging.level.com.ticketing.auth=DEBUG
-
-# eureka
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-server.port=8080
-eureka.client.serviceUrl.defaultZone=http://discovery-srv:8010/eureka
+logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS,US/Eastern
 
 # actuator
 management.endpoints.web.exposure.include=*
