--- a/infra/k8s/auth-depl.yml
+++ b/infra/k8s/auth-depl.yml
@@ -15,6 +15,12 @@ spec:
       containers:
         - name: auth
           image: gcr.io/ticketing-333617/ticketing-auth
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 3
+            periodSeconds: 3
           # env:
           #   - name: MONGO_URI
           #     value: 'mongodb://auth-mongo-srv:27017/auth'
@@ -36,3 +42,4 @@ spec:
       protocol: TCP
       port: 8080
       targetPort: 8080
+  type: NodePort
