--- a/infra/k8s/tickets-depl.yml
+++ b/infra/k8s/tickets-depl.yml
@@ -15,6 +15,12 @@ spec:
       containers:
         - name: tickets
           image: gcr.io/ticketing-333617/ticketing-tickets
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 3
+            periodSeconds: 3
 ---
 apiVersion: v1
 kind: Service
@@ -28,4 +34,4 @@ spec:
       protocol: TCP
       port: 8080
       targetPort: 8080
-  type: LoadBalancer
+  type: NodePort
