--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -8,3 +8,7 @@ logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS,US/Eastern
 
 # actuator
 management.endpoints.web.exposure.include=*
+
+# mongo
+spring.data.mongodb.uri=mongodb://tickets-mongo-srv:27017/auth
+spring.data.mongodb.database=ticketing-database
